# PixelPacker

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  main.py  origSizes.txt  pixelpacker_profile.prof  pyproject.toml  test_report.html  webpSizes.txt
.github/workflows/: ci.yml  release.yml
Input_TIFFS/: config.json
Roadmaps/: v0.2-Roadmap-Multichannel.md  v0.2-Roadmap-Step2.md  v0.2-Roadmap.md
src/pixelpacker/: cli.py  core.py  crop.py  data_models.py  io_utils.py  limits.py  manifest.py  processing.py  stretch.py  utils.py
src/pixelpacker/tests/: conftest.py  test_cli.py  test_manifest.py  test_mock_pipeline.py  test_pipeline.py  test_stretch.py
src/pixelpacker/tests/data/single_real_input/: volume_ch0_stack0000.tif
tiff_cropper/: config.json  crop_tool.py  generate_crop_config.py  index.html  interactive_cropper.ipynb  runme.md
