[project]
name = "pixelpacker"
version = "0.1.0"
description = "Automates TIFF stack processing: autoscale, convert to 8‑bit, tile 3D volumes into 2D atlases, and compress to WebP for web‑based volumetric viewing."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Brandon Scott", email = "brandon.scott@sdsmt.edu" },
]
keywords = ["tiff", "webp", "volumetric", "atlas", "imaging", "pipeline"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "docopt>=0.6.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pillow>=11.2.1",
    "scipy>=1.15.2",
    "tifffile>=2025.3.30",
    "tqdm>=4.67.1",
]

[project.urls]
"Homepage" = "https://github.com/bscott711/PixelPacker"
"Source"   = "https://github.com/bscott711/PixelPacker"
"Tracker"  = "https://github.com/bscott711/PixelPacker/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
